--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 </head>
 <body>
   <bold><h1>PERSONAL INFORMATION</h1></bold>
+  <img src="../port pic/IMG-20191217-WA0009.jpg" height="500px" width="500px">
+  
+
   
   
 </body>
