added a background about myself

--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 <body>
   <bold><h1>PERSONAL INFORMATION</h1></bold>
   <img src="../port pic/IMG-20191217-WA0009.jpg" height="500px" width="500px">
-  
+  <p>My name is <em>SANDRA MARYANNE</em> I am 20years old.I completed my 
+    form four last year but one and am the <bold>CEO<bold>of <bold>ANISAN</bold><br> I love nature and as a result of tht,
+    i decided to come up with an idea to help control human wildlife comclict.
+
 
   
   
