--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
   <img src="../port pic/IMG-20191217-WA0009.jpg" height="500px" width="500px">
   <p>My name is <em>SANDRA MARYANNE</em> I am 20years old.I completed my 
     form four last year but one and am the <bold>CEO<bold>of <bold>ANISAN</bold><br> I love nature and as a result of tht,
-    i decided to come up with an idea to help control human wildlife comclict.
+    i decided to come up with an idea to help control human wildlife conflict.
+
+    <bold><h2>MY BACKGROUND</h2></bold>
 
 
   
