--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 <body>
   <bold><h1>PERSONAL INFORMATION</h1></bold>
   <img src="../port pic/IMG-20191217-WA0009.jpg" height="500px" width="500px">
-  <p>My name is <em>SANDRA MARYANNE</em> I am 20years old.I completed my 
-    form four last year but one and am the <bold>CEO<bold>of <bold>ANISAN</bold><br> I love nature and as a result of tht,
+  <p>My name is <em><span style="color:brown;font-weight:bold">SANDRA MARYANNE</span></em> I am 20years old.I completed my 
+    form four last year but one and am the <bold>CEO<bold>of <bold><span style="color:brown;">ANISAN</span></bold><br> I love nature and as a result of tht,
     i decided to come up with an idea to help control human wildlife conflict.
 
     <bold><h2>MY BACKGROUND</h2></bold>
