added images of the Elephant's destructions

--- a/index.html
+++ b/index.html
@@ -6,13 +6,21 @@
   <title>PORTFOLIO</title>
 </head>
 <body>
-  <bold><h1>PERSONAL INFORMATION</h1></bold>
+  <h1><bold><span style="color:brown;">MY PORFOLIO</span></bold></h1>
+
   <img src="../port pic/IMG-20191217-WA0009.jpg" height="500px" width="500px">
   <p>My name is <em><span style="color:brown;font-weight:bold">SANDRA MARYANNE</span></em> I am 20years old.I completed my 
-    form four last year but one and am the <bold>CEO<bold>of <bold><span style="color:brown;">ANISAN</span></bold><br> I love nature and as a result of tht,
+    form four last year but one and am the <bold>CEO<bold>of <bold><span style="color:brown;">ANISAN</span></bold><br> 
+    I love nature and as a result of tht,
     i decided to come up with an idea to help control human wildlife conflict.
 
-    <bold><h2>MY BACKGROUND</h2></bold>
+   <h2><bold><span style="color:brown;">MY BACKGROUND</span></bold></h2>
+   <p>I was born and brought up in an area where by we face a challenge with the <em><span style="color: brown;">ELEPHANTS.</span></em>
+    The pictures below show the examples of the human wildlife conflict:<br>
+    <img src="https://bit.ly/2T7vFT9" height="500px" width="500px">
+    <img src="https://bit.ly/32GzVfu" height="500px" width="500px">
+    <br>As a result of that i came up with a gadget that will help control human wildlife conflict that:<br>
+    
 
 
   
