added an unordered list

--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
     <img src="https://bit.ly/2T7vFT9" height="500px" width="500px">
     <img src="https://bit.ly/32GzVfu" height="500px" width="500px">
     <br>As a result of that i came up with a gadget that will help control human wildlife conflict that:<br>
+    <em><ol>
+      <li>Detects early enough the presence of the Elephants</li>
+      <li>Alerts the community earlier</li>
+      <li>Scares away the Elephants</li>
+    </ol></em>
     
 
 
