--- a/index.html
+++ b/index.html
@@ -20,12 +20,22 @@
     <img src="https://bit.ly/2T7vFT9" height="500px" width="500px">
     <img src="https://bit.ly/32GzVfu" height="500px" width="500px">
     <br>As a result of that i came up with a gadget that will help control human wildlife conflict that:<br>
-    <em><ol>
+    <em><ul>
       <li>Detects early enough the presence of the Elephants</li>
       <li>Alerts the community earlier</li>
       <li>Scares away the Elephants</li>
-    </ol></em>
-    
+    </ul></em>
+    <bold><h2><span style="color:brown">MY HOBBIES</span></h2></bold>
+    <p>When am at my leisure time i enjoy passing my time doing different activities such as:<br>
+     <em><ul>
+        <li>Swimming</li>
+        <li>Dancing</li>
+        <li>Reading Novels</li>
+        <li>Listening to music</li>
+     </em></ul>
+
+
+
 
 
   
