added my current interests

--- a/index.html
+++ b/index.html
@@ -27,12 +27,16 @@
     </ul></em>
     <bold><h2><span style="color:brown">MY HOBBIES</span></h2></bold>
     <p>When am at my leisure time i enjoy passing my time doing different activities such as:<br>
-     <em><ul>
+     <em><ol>
         <li>Swimming</li>
         <li>Dancing</li>
         <li>Reading Novels</li>
         <li>Listening to music</li>
-     </em></ul>
+     </em></ol>
+     <bold><h2>MY CURRENT INTERESTS</h2></bold>
+     <p>Currently am at <strong>MORINGA SCHOOL</strong> pursuing my course so that i may be able to run my project by myself<br>
+     Its so hectic and tiresome to keep following people to code for you your idea<br> My main wish is to pursue this course successfully
+     and understand the full content too.</p>
 
 
 
