--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
         <li>Reading Novels</li>
         <li>Listening to music</li>
      </em></ol>
-     <bold><h2>MY CURRENT INTERESTS</h2></bold>
-     <p>Currently am at <strong>MORINGA SCHOOL</strong> pursuing my course so that i may be able to run my project by myself<br>
+     <bold><h2><span style="color:brown"> CURRENT INTERESTS</span></h2></bold>
+     <p>Currently am at <strong><span style="color:brown">MORINGA SCHOOL</span></strong> pursuing my course so that i may be able to run my project by myself<br>
      Its so hectic and tiresome to keep following people to code for you your idea<br> My main wish is to pursue this course successfully
      and understand the full content too.</p>
 
