--- a/index.html
+++ b/index.html
@@ -4,8 +4,17 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>PORTFOLIO</title>
+  <div class="topnav">
+    <a href="#about" class="active">About</a>
+    <a href="#hobbies" class="active">Hobbies</a>
+    <a href="#interests" class="active">Interests</a>
+    <a href="#contact" class="active">Contact</a>
+
+
+  </div>
 </head>
 <body>
+  <div id="about">
   <h1><bold><span style="color:brown;">MY PORFOLIO</span></bold></h1>
 
   <img src="../port pic/IMG-20191217-WA0009.jpg" height="500px" width="500px">
@@ -24,7 +33,8 @@
       <li>Detects early enough the presence of the Elephants</li>
       <li>Alerts the community earlier</li>
       <li>Scares away the Elephants</li>
-    </ul></em>
+    </ul></em></p></div>
+    <div id="hobbies">
     <bold><h2><span style="color:brown">MY HOBBIES</span></h2></bold>
     <p>When am at my leisure time i enjoy passing my time doing different activities such as:<br>
      <em><ol>
@@ -32,11 +42,19 @@
         <li>Dancing</li>
         <li>Reading Novels</li>
         <li>Listening to music</li>
-     </em></ol>
+     </em></ol></p></div>
+     <div id="interests">
      <bold><h2><span style="color:brown"> CURRENT INTERESTS</span></h2></bold>
      <p>Currently am at <strong><span style="color:brown">MORINGA SCHOOL</span></strong> pursuing my course so that i may be able to run my project by myself<br>
      Its so hectic and tiresome to keep following people to code for you your idea<br> My main wish is to pursue this course successfully
-     and understand the full content too.</p>
+     and understand the full content too.</p></div>
+     <div id="contacts">
+      <bold><h2><span style="color:brown"> CONTACTS</span></h2></bold> 
+      <P>Incase anyone would like to reach out to me for any more information you may:<br>
+        
+
+      </P>
+     </div>
 
 
 
