changes on the contact session

--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
      <div id="contacts">
       <bold><h2><span style="color:brown"> CONTACTS</span></h2></bold> 
       <P>Incase anyone would like to reach out to me for any more information you may:<br>
-        
-
-      </P>
-     </div>
+       <Email:sandramaryanne9@gmail class="com"></Email:sandramaryanne9@gmail> 
+       <phone number: 0746155151.></phone>
+     </P>
+    </div>
 
 
 
