created a css file

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <a href="#hobbies" class="active">Hobbies</a>
     <a href="#interests" class="active">Interests</a>
     <a href="#contact" class="active">Contact</a>
+    <link href="css/grayscale.min.css" rel="stylesheet">
 
 
   </div>
@@ -51,8 +52,8 @@
      <div id="contacts">
       <bold><h2><span style="color:brown"> CONTACTS</span></h2></bold> 
       <P>Incase anyone would like to reach out to me for any more information you may:<br>
-       <Email:sandramaryanne9@gmail class="com"></Email:sandramaryanne9@gmail> 
-       <phone number: 0746155151.></phone>
+       <p>Email:sandramaryanne9@gmail 
+       </p>
      </P>
     </div>
 
