added some styles to my css

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <a href="#hobbies" class="active">Hobbies</a>
     <a href="#interests" class="active">Interests</a>
     <a href="#contact" class="active">Contact</a>
-    <link href="css/grayscale.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
 
 
   </div>
